--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/types/supabase.js", "app/types/db.js", "app/screen/index.jsx"  ]
 }
