--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "fitness",
     "slug": "fitness",
+    "scheme": "your-app-scheme",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
